增加任务完成情况的进度条

--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
   },
   "sitemapLocation": "sitemap16.json",
   "usingComponents": {
-    "van-calendar": "@vant/weapp/calendar/index"
+    "van-calendar": "@vant/weapp/calendar/index",
+    "van-progress": "@vant/weapp/progress/index"
   }
 }
