增加搜索和评分

--- a/project.config.json
+++ b/project.config.json
@@ -16,7 +16,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.3",
-	"appid": "touristappid",
+	"appid": "wx0ba41c68f04db9e6",
 	"projectname": "miniprogram-3",
 	"debugOptions": {
 		"hidedInDevtools": []
