--- a/app.json
+++ b/app.json
@@ -14,6 +14,9 @@
   "sitemapLocation": "sitemap16.json",
   "usingComponents": {
     "van-calendar": "@vant/weapp/calendar/index",
-    "van-progress": "@vant/weapp/progress/index"
+    "van-progress": "@vant/weapp/progress/index",
+    "van-rate": "@vant/weapp/rate/index",
+    "van-search": "@vant/weapp/search/index",
+    "van-toast": "@vant/weapp/toast/index"
   }
 }
